--- a/project.css
+++ b/project.css
@@ -22,6 +22,7 @@ body{
     font-style: normal;
     font-weight: bold;
 }
+
 .b1{
     font-size:25px;
     height:40px;
@@ -57,12 +58,12 @@ font-size:35px;
 .plus1{
     position:absolute;
     top:95px;
-     left:530px;
+     left:150px;
 }
 .plus2{
     position:absolute;
     top:95px;
-    left: 650px;;
+    left: 75vw;;
 }
 .plus3{
     position:absolute;
@@ -154,14 +155,14 @@ right:380px;
     font-size:large;
     position: absolute;
     top:105px;
-    left:690px;
+    left:78vw;
 }
 .p3{
     font-weight: bold;
     font-size:large;
     position:absolute;
     top:105px;;
-    left:580px;
+    left:200px;
 }
 .next{
     background-color:white;
